--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,7 @@ dependencies = [
     "python-multipart==0.0.20",
     "structlog>=25.5.0",
     "uvicorn==0.32.1",
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.1",
 ]
